fix: AnnotationNewlineFormat now persists through AutoFormat (#11)
* Fix: Preserve trailing comments on annotations with multiple annotations

Previously, the AnnotationNewlineFormat recipe correctly preserved
trailing inline comments when there was a single annotation, but
incorrectly moved them to a separate line when there were multiple
annotations on the same element (method, field, or class).

Root cause:
- The inline comment check was only performed for single annotations
- For multiple annotations, the check was skipped, causing reformatting
  that separated the comment from the last annotation

Changes:
- Updated needsMethodFormatting() to check for inline comments regardless
  of annotation count (lines 162-194)
- Updated needsFieldFormatting() with the same logic (lines 196-228)
- Updated needsFormatting() for class declarations (lines 137-161)

Test coverage:
- Added 3 new tests demonstrating the fix
- All 173 tests pass

Example of fixed behavior:
Before (incorrect):
  @SuppressWarnings("java:S1612")
  // Cannot use method reference due to ambiguous get() methods
  void concurrentAccess() { }

After (correct - preserved):
  @SuppressWarnings("java:S1612") // Cannot use method reference due to ambiguous get() methods
  void concurrentAccess() { }

* Fix: Add TODO token and suppression hint to parameter count mismatch markers

Previously, parameter count mismatch markers were missing the "TODO:"
prefix and suppression hint that are present in other markers like
System.out usage warnings.

Root cause:
- Line 349 in CuiLoggerStandardsRecipe.java was creating markers without
  the standard TODO prefix and suppression hint
- This was inconsistent with other markers in the same recipe (line 239)

Changes:
- Updated marker message format from:
  "%d placeholders, %d params"
  to:
  "TODO: %d placeholders, %d params. Suppress: // cui-rewrite:disable %s"
- Updated tests to expect the new format with TODO token

Test coverage:
- Updated 2 existing tests to verify T